[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hastesm"
version = "0.7.1"
license = {file = "LICENSE"}
description = "Tool for molecule shape similarity searching"
authors = [
    {name = "Samuli Näppi", email = "samuli.nappi@orionpharma.com"},
    {name = "Tuomo Kalliokoski", email = "tuomo.kalliokoski@orionpharma.com"},
]
maintainers = [
  {name = "Tuomo Kalliokoski", email = "tuomo.kalliokoski@orionpharma.com"},
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.1",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "aimsim-core==2.2.2",
    "aiohappyeyeballs==2.4.0",
    "aiohttp==3.10.5",
    "aiosignal==1.3.1",
    "astartes[molecules]==1.3.0",
    "attrs==24.2.0",
    "chemprop==2.0.4",
    "configargparse==1.7",
    "dill==0.3.8",
    "filelock==3.15.4",
    "frozenlist==1.4.1",
    "fsspec[http]==2024.6.1",
    "idna==3.8",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "lightning-utilities==0.11.6",
    "lightning==2.4.0",
    "markupsafe==2.1.5",
    "mhfp==1.9.6",
    "mordredcommunity==2.0.6",
    "mpmath==1.3.0",
    "multidict==6.0.5",
    "multiprocess==0.70.16",
    "networkx==3.3",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-nccl-cu12==2.20.5",
    "nvidia-nvjitlink-cu12==12.6.20",
    "nvidia-nvtx-cu12==12.1.105",
    "packaging==24.1",
    "padelpy==0.1.16",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "psutil==6.0.0",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.4.0",
    "pytz==2024.1",
    "pyyaml==6.0.2",
    "rdkit==2024.3.5",
    "scikit-learn==1.5.1",
    "scipy==1.14.1",
    "setuptools==73.0.1",
    "six==1.16.0",
    "sympy==1.13.2",
    "tabulate==0.9.0",
    "threadpoolctl==3.5.0",
    "torch==2.4.0",
    "torchmetrics==1.4.1",
    "tqdm==4.66.5",
    "triton==3.0.0",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "yarl==1.9.4",
]

[project.scripts]
hastesm = "hastesm.main:main"
